--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -21,7 +21,7 @@
 }
 
 .search-date-title h1 {
-    @apply font-bold text-3xl;
+    @apply font-bold xxs:text-3xl md:text-4xl;
 }
 
 .search-date-title p {
@@ -77,7 +77,7 @@ input[type="text"] {
 }
 
 .search-date-result {
-    @apply h-[40%] w-full border border-slate-700 shadow-2xl flex flex-col gap-1.5 justify-center items-center;
+    @apply h-[40%] w-full border-t border-t-slate-700 shadow-2xl flex flex-col gap-1.5 justify-center items-center;
 }
 
 .search-date-result-days-info {
